kubernetes/apps/monitoring/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
spec:
  hostnames: ["blackbox-exporter.${INGRESS_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: blackbox-exporter
          namespace: monitoring
          port: 9115
